# otus9

./: Application.cpp  Application.hpp  CMakeLists.txt  Canvas.cpp  Canvas.hpp  Consts.hpp  Game.cpp  Game.hpp  GameState.hpp  Player.cpp  Player.hpp  main.cpp
controllers/: EmptyController.hpp  KeyboardPlayerController.hpp  PlayerController.hpp  RemoteController.hpp  RemotePlayerController.hpp  RemoteServerController.hpp
device/: Device.hpp  DrawDevice.hpp  InputDevice.hpp
network/: Message.hpp  Network.hpp  SfmtNetwork.hpp
sfml/: SfmlDevice.hpp  SfmlDrawDevice.cpp  SfmlDrawDevice.hpp  SfmlInputDevice.cpp  SfmlInputDevice.hpp  SfmlNetExchange.cpp  SfmlNetExchange.hpp  SfmlTcpGameClient.hpp  SfmlTcpGameServer.hpp
tests/: CMakeLists.txt  serialisation_tests.cpp
